Edited wiki page Openwrt_instructions through web user interface.

--- a/wiki/Openwrt_instructions.wiki
+++ b/wiki/Openwrt_instructions.wiki
@@ -91,9 +91,7 @@ You are going to want to install a program called *TFTP*
 
 TFTP allows you to transfer information via the uart. 
 
-To figure out what port your UART is on, do an ls /dev/ttyUSB* before and after installing the cable and see the difference. Or you can run dmesg and see what port was assigned to it. 
+To figure out what port your UART is on, do an ls /dev/ttyUSB (with an asterisk, don't know how to escape that special character on the wiki) before and after installing the cable and see the difference. Or you can run dmesg and see what port was assigned to it. 
 
 == WEB Browser ==
-
-
 
