Edited wiki page IridiumCode through web user interface.

--- a/wiki/IridiumCode.wiki
+++ b/wiki/IridiumCode.wiki
@@ -1,5 +1,5 @@
+#summary Wiki for Iridium Code work and todos and generic information
 #labels Iridium
-#Summary Wiki for Iridium Code work and todos and generic information
 
 = Introduction =
 
