Edited wiki page Openwrt_instructions through web user interface.

--- a/wiki/Openwrt_instructions.wiki
+++ b/wiki/Openwrt_instructions.wiki
@@ -83,14 +83,32 @@ There are two ways of loading an image. One is through the browser (does not wor
 
 I will discuss at first the UART. and then the browser, as once you upgrade the RSPRO's image you can load through the web interface.
 
-== UART ==
+== TFTP ==
 
 Both the RSPRO and the Litestation have a UART interface. Getting/hacking the cable for this is available online, but I'll include a wiki for it since it is a pain. 
 
-You are going to want to install a program called *TFTP*
+You are going to want to install a program called *TFTP*, similar to FTP.
 
-TFTP allows you to transfer information via the uart. 
+TFTP allows you to transfer information to the bootloader of the router. Make sure you have the UART connected and the ethernet on the powered ethernet port connected. The UART, if consoled in to it, will tell you if the TFTP server is indeed running. so, use it, console it and always always be connected to it while developing, even if you prefer doing stuff via the ethernet port. 
 
-To figure out what port your UART is on, do an ls /dev/ttyUSB (with an asterisk, don't know how to escape that special character on the wiki) before and after installing the cable and see the difference. Or you can run dmesg and see what port was assigned to it. 
+To figure out what port your UART is on, do an ls /dev/ttyUSB (with an asterisk, don't know how to escape that special character on the wiki) before and after installing the cable and see the difference. Or you can run dmesg and see what port was assigned to it. Do this to make sure linux recognized your stuff and to know who to kermit into.
+
+Unplug the router and turn it back on and hold down the reset button. You should see on the kermit window TFTP running. Change your ip address to a 192.168.2 or above address.
+
+ping 192.168.1.1, you should see stuff coming back.
+
+Start TFTP and conect to 192.168.1.1
+type binary for binary mode
+put your file
+
+you should see a progress bar of sorts.
 
 == WEB Browser ==
+
+This is the method I've been using for a year and haven't gone back since (ok, I lie...I've locked my modem trying to do a few things, including loading a cross compiled java and locking out ethernet connection with modded drivers). So, TFTP will be your friend.
+
+The browser, however, is easier. Once you do your first firmware install on RSPRO or using the default AIROS on the litestation...you can go to your browser and put in the routers IP address. There is a tab that allows you to load an image. Simple and to the point.
+
+I use LUCI as my web manager, combined with a few MRTG addons to look at statistics. I forgot what the default kamikaze build comes with on the RSPRO, but it doesn't matter, it too has a tab and so does AIROS. Sadly, to re-iterate, the default kamikaze web loader does not support this feature well, so you must TFTP the latest firmware.
+
+
