--- a/wiki/Configuration_for_both.wiki
+++ b/wiki/Configuration_for_both.wiki
@@ -1,4 +1,4 @@
-#router custom startup script
+#summary router custom startup script
 
 = Introduction =
 
@@ -42,7 +42,5 @@ START=999
 start() {
 /etc/DTNRouter
 }
-
-
 
 
